--- a/Cargo.toml
+++ b/Cargo.toml
@@ -284,7 +284,7 @@ tracing-forest = "^0.1.6"
 
 url = "^2.5.2"
 urlencoding = "2.1.3"
-utoipa = "4.2.0"
+utoipa = { version = "4.2.0", features = ["url", "uuid"] }
 utoipa-swagger-ui = "6.0.0"
 uuid = "^1.10.0"
 
