--- a/libs/scim_proto/Cargo.toml
+++ b/libs/scim_proto/Cargo.toml
@@ -20,11 +20,15 @@ base64urlsafedata = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 peg = { workspace = true }
-time = { workspace = true, features = ["local-offset", "formatting", "parsing", "serde"] }
+time = { workspace = true, features = [
+    "local-offset",
+    "formatting",
+    "parsing",
+    "serde",
+] }
 tracing = { workspace = true }
 url = { workspace = true, features = ["serde"] }
+utoipa = { workspace = true }
 uuid = { workspace = true, features = ["serde"] }
-utoipa.workspace = true
-
 [dev-dependencies]
 tracing-subscriber = { workspace = true }
