--- a/proto/Cargo.toml
+++ b/proto/Cargo.toml
@@ -21,6 +21,7 @@ test = []
 
 [dependencies]
 base32 = { workspace = true }
+clap = { workspace = true }
 num_enum = { workspace = true }
 scim_proto = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
