Resolve incorrect SCIM Sync serialisation (#3047)

--- a/libs/scim_proto/Cargo.toml
+++ b/libs/scim_proto/Cargo.toml
@@ -19,6 +19,7 @@ doctest = false
 base64urlsafedata = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+serde_with = { workspace = true }
 peg = { workspace = true }
 time = { workspace = true, features = [
     "local-offset",
