--- a/.github/workflows/kanidm_individual_book.yml
+++ b/.github/workflows/kanidm_individual_book.yml
@@ -51,8 +51,10 @@ jobs:
           python-version: "3.10"
 
       - name: Build the docs
+        # pinning mdbook-alerts because of <https://github.com/lambdalisue/rs-mdbook-alerts/issues/79>
         run: |
-          cargo install mdbook-alerts mdbook-mermaid
+          cargo install mdbook-alerts --version 0.6.4
+          cargo install mdbook-mermaid
           cargo doc --no-deps
           mdbook build *book
           rm -rf ./docs/
