feat: Rebuild the deb packaging flow
Squash together the sordid history so it's easier to work with as we
near the end

refactor: Rework crossbuild to be more generic

- Also fixes issues with OpenSSL cross-building.

refactor: Drop crossbuild for ubuntu-20.04

Less than 6 months of security updates left, not much point in making
the target work.

WIP: Add cargo-deb metadata for unixd

fix: actually believe the triplet for build target

feat: Add crossbuild targets for debian-12

Also includes an x86_64 target for the fun of it. Haven't tested if it
works on a platform that is not x86_64

WIP: uproof-of-concept packaging dep chain [skip ci]

WIP: Theoretical systemd unit support for unixd [skip ci]

WIP: refactor debian build script [skip ci]

fix: Add missing matrix target for ubuntu x86_64

WIP: refactor GHA deb build workflow

fix: Add dependencies separately for GHA cross native build

fix: Slim down deb build dependencies to avoid ubuntu wonk

fix: add more Power

fix: Would be super nice if gh-act was any better

fix: Correct quoting for cross conf

fix: do the script rename I forgot to do

fix: Create a robust-er cargo-deb deps install

fix: Add more sudo, GHA likes sudo

fix: Split crossbuild in two to perhaps make it faster

fix: Give build_debs.sh only the triplet argument

fix: Work around more GHA weirdness in apt sources

Remove debian packaging artefacts for the move

Drop crossbuild as it was only used by debian packaging

docs: Update book and other docs for packaging flow

feat: package kanidm_tools aka kanidm cli

refactor: switch to permanent automation repo name

docs: Update packaging docs for latest process and clarity

fix: use full triple in sdynlib variants

fix: Correct kanidm.pam asset placement

fix: Give pam & nss modules a description so the debs get it

fix: Work around wonky libssl3 naming in Ubuntu 24.04

fix: Place kanidm bin correctly :3

feat: Pin all blame on @yaleman :3

WIP: Swap out the submodule reference. Still not the final

--- a/unix_integration/pam_kanidm/Cargo.toml
+++ b/unix_integration/pam_kanidm/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "pam_kanidm"
+description = "Kanidm PAM module"
 links = "pam"
 
 version = { workspace = true }
@@ -23,3 +24,28 @@ tracing = { workspace = true }
 
 [build-dependencies]
 pkg-config = { workspace = true }
+
+## Debian packaging
+# The base metadata does **not** work to build a functioning package!
+# A target specific variant must be used to get the right multiarch path.
+[package.metadata.deb]
+name = "kanidm-pam"
+maintainer = "James Hodgkinson <james@terminaloutcomes.com>"
+depends = ["libc6", "libpam0g"]
+section = "network"
+priority = "optional"
+assets = [
+	# Empty on purpose
+]
+
+[package.metadata.deb.variants.aarch64-unknown-linux-gnu]
+merge-assets.append = [
+    [ "target/release/libpam_kanidm.so", "usr/lib/aarch64-linux-gnu/security/pam_kanidm.so", "644"],
+    [ "debian/kanidm.pam", "usr/share/pam-configs/kanidm", "644"],
+]
+
+[package.metadata.deb.variants.x86_64-unknown-linux-gnu]
+merge-assets.append = [
+    [ "target/release/libpam_kanidm.so", "usr/lib/x86_64-linux-gnu/security/pam_kanidm.so", "644"],
+    [ "debian/kanidm.pam", "usr/share/pam-configs/kanidm", "644"],
+]
