Working scim entry get for person

--- a/libs/client/Cargo.toml
+++ b/libs/client/Cargo.toml
@@ -28,6 +28,7 @@ http = { workspace = true }
 hyper = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
+serde_urlencoded = { workspace = true }
 time = { workspace = true, features = ["serde", "std"] }
 tokio = { workspace = true, features = [
     "rt",
