--- a/Cargo.toml
+++ b/Cargo.toml
@@ -255,6 +255,7 @@ selinux = "^0.4.6"
 serde = "^1.0.210"
 serde_cbor = { version = "0.12.0-dev", package = "serde_cbor_2" }
 serde_json = "^1.0.128"
+serde_urlencoded = "^0.7.1"
 serde-wasm-bindgen = "0.5"
 serde_with = "3.11.0"
 sha-crypt = "0.5.0"
