fix(web): adding cache-busting querystrings to loaded elements

--- a/server/core/Cargo.toml
+++ b/server/core/Cargo.toml
@@ -94,4 +94,5 @@ walkdir = { workspace = true }
 tempfile = { workspace = true }
 
 [build-dependencies]
+gix = { workspace = true }
 kanidm_build_profiles = { workspace = true }
