--- a/libs/profiles/Cargo.toml
+++ b/libs/profiles/Cargo.toml
@@ -20,9 +20,10 @@ test = false
 doctest = false
 
 [dependencies]
-serde = { workspace = true, features = ["derive"] }
-toml = { workspace = true }
 base64 = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
+sha2 = { workspace = true }
+toml = { workspace = true }
 
 [build-dependencies]
 base64 = { workspace = true }
