--- a/tools/device_flow/Cargo.toml
+++ b/tools/device_flow/Cargo.toml
@@ -21,5 +21,12 @@ path = "src/main.rs"
 kanidm_proto = { workspace = true }
 anyhow = { workspace = true }
 oauth2 = "4.4.2"
+reqwest = { version = "0.12.8", default-features = false, features = [
+    "blocking",
+    "rustls-tls",
+] }
+
 tokio = { workspace = true, features = ["full"] }
 url = { workspace = true }
+tracing = { workspace = true }
+sketching = { workspace = true }
