--- a/tools/device_flow/Cargo.toml
+++ b/tools/device_flow/Cargo.toml
@@ -30,3 +30,4 @@ tokio = { workspace = true, features = ["full"] }
 url = { workspace = true }
 tracing = { workspace = true }
 sketching = { workspace = true }
+base64.workspace = true
