feat: Attempt enabling unixd by default with secure defaults

--- a/unix_integration/resolver/Cargo.toml
+++ b/unix_integration/resolver/Cargo.toml
@@ -132,11 +132,13 @@ assets = [
     [ "target/release/kanidm_unixd_tasks", "usr/sbin/", "755" ],
     [ "target/release/kanidm_unixd", "usr/sbin/", "755" ],
     [ "target/release/kanidm-unix", "usr/sbin/", "755" ],
+    [ "../../examples/unixd-safe-default", "etc/kanidm/unixd", "640" ],
+    [ "../../examples/kanidm-safe-default", "etc/kanidm/config", "640" ],
     [ "../../examples/kanidm", "usr/share/kanidm-unixd/", "444" ],
     [ "../../examples/unixd", "usr/share/kanidm-unixd/", "444" ],
 ]
 maintainer-scripts = "debian/"
 systemd-units = [
-	{ unit-name = "kanidm-unixd", enable = false}, 
-	{ unit-name = "kanidm-unixd-tasks", enable = false}, 
+	{ unit-name = "kanidm-unixd", enable = true}, 
+	{ unit-name = "kanidm-unixd-tasks", enable = true},
 ]
