--- a/tools/cli/Cargo.toml
+++ b/tools/cli/Cargo.toml
@@ -49,7 +49,7 @@ rpassword = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 shellexpand = { workspace = true }
-time = { workspace = true, features = ["serde", "std"] }
+time = { workspace = true, features = ["serde", "std", "local-offset"] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
 tokio = { workspace = true, features = ["rt", "macros", "fs", "signal"] }
