--- a/tools/cli/Cargo.toml
+++ b/tools/cli/Cargo.toml
@@ -14,6 +14,7 @@ repository = { workspace = true }
 [features]
 default = ["unix"]
 unix = []
+dev-oauth2-device-flow = []
 
 [lib]
 name = "kanidm_cli"
