an extra test, bleep bloop

--- a/server/testkit/Cargo.toml
+++ b/server/testkit/Cargo.toml
@@ -18,7 +18,7 @@ test = true
 doctest = false
 
 [features]
-default = []
+# default = ["dev-oauth2-device-flow"]
 # Enables webdriver tests, you need to be running a webdriver server
 webdriver = []
 
