--- a/.github/workflows/docker_build_radiusd.yml
+++ b/.github/workflows/docker_build_radiusd.yml
@@ -12,22 +12,28 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  set_lower_case_name:
+  set_tag_values:
     runs-on: ubuntu-latest
-    name: set lower case owner name
+    name: Set image tag values
     steps:
       - id: step1
         run: |
           echo "OWNER_LC=${OWNER,,}" >> "${GITHUB_OUTPUT}"
         env:
           OWNER: '${{ github.repository_owner }}'
+      - id: step2
+        run: |
+          echo "REF_NAME=$(echo ${REF_NAME,,} | awk -F/ '{print $1}')" >> "${GITHUB_OUTPUT}"
+        env:
+          REF_NAME: '${{ github.ref_name }}'
     outputs:
       owner_lc: ${{ steps.step1.outputs.OWNER_LC }}
+      ref_name: ${{ steps.step2.outputs.REF_NAME }}
 
   radius_build:
     name: Build radius Docker image
     runs-on: ubuntu-latest
-    needs: set_lower_case_name
+    needs: set_tag_values
     steps:
       - uses: actions/checkout@v4
       - name: Set up QEMU
@@ -38,7 +44,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           platforms: linux/arm64,linux/amd64
-          tags: ghcr.io/${{ needs.set_lower_case_name.outputs.owner_lc }}/radius:devel
+          tags: ghcr.io/${{ needs.set_tag_values.outputs.owner_lc }}/radius:devel,ghcr.io/${{ needs.set_tag_values.outputs.owner_lc }}/radius:${{ needs.set_tag_values.outputs.ref_name}}
           file: rlm_python/Dockerfile
           # Must use OCI exporter for multi-arch: https://github.com/docker/buildx/pull/1813
           outputs: type=oci,dest=/tmp/radius-docker.tar
