--- a/proto/Cargo.toml
+++ b/proto/Cargo.toml
@@ -37,6 +37,7 @@ utoipa = { workspace = true }
 uuid = { workspace = true, features = ["serde"] }
 webauthn-rs-proto = { workspace = true }
 sshkey-attest = { workspace = true }
+sshkeys = { workspace = true }
 
 [dev-dependencies]
 enum-iterator = { workspace = true }
