--- a/server/core/Cargo.toml
+++ b/server/core/Cargo.toml
@@ -21,6 +21,7 @@ ui_htmx = []
 [dependencies]
 async-trait = { workspace = true }
 askama = { workspace = true }
+askama_axum = { workspace = true }
 axum = { workspace = true }
 axum-htmx = { workspace = true }
 axum-auth = "0.7.0"
@@ -88,7 +89,6 @@ webauthn-rs = { workspace = true, features = [
     "preview-features",
     "danger-credential-internals",
 ] }
-askama_axum = "0.4.0"
 
 [dev-dependencies]
 walkdir = { workspace = true }
