yale's rabbit-hole-chasing-htmx-fixing-megapatch (#3135)

--- a/server/core/Cargo.toml
+++ b/server/core/Cargo.toml
@@ -21,6 +21,7 @@ ui_htmx = []
 [dependencies]
 async-trait = { workspace = true }
 askama = { workspace = true }
+askama_axum = { workspace = true }
 axum = { workspace = true }
 axum-htmx = { workspace = true }
 axum-auth = "0.7.0"
