--- a/.github/workflows/docker_build_kanidm.yml
+++ b/.github/workflows/docker_build_kanidm.yml
@@ -12,22 +12,28 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  set_lower_case_name:
+  set_tag_values:
     runs-on: ubuntu-latest
-    name: set lower case owner name
+    name: Set image tag values
     steps:
       - id: step1
         run: |
           echo "OWNER_LC=${OWNER,,}" >> "${GITHUB_OUTPUT}"
         env:
           OWNER: '${{ github.repository_owner }}'
+      - id: step2
+        run: |
+          echo "REF_NAME=$(echo ${REF_NAME,,} | awk -F/ '{print $1}')" >> "${GITHUB_OUTPUT}"
+        env:
+          REF_NAME: '${{ github.ref_name }}'
     outputs:
       owner_lc: ${{ steps.step1.outputs.OWNER_LC }}
-
+      ref_name: ${{ steps.step2.outputs.REF_NAME }}
   kanidm_build:
     name: Build kanidm Docker image
     runs-on: ubuntu-latest
-    needs: set_lower_case_name
+    needs:
+      - set_tag_values
     steps:
       - uses: actions/checkout@v4
       - name: Set up Docker Buildx
@@ -36,11 +42,10 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           platforms: "linux/amd64"
-          tags: ghcr.io/${{ needs.set_lower_case_name.outputs.owner_lc }}/kanidm:devel
+          tags: ghcr.io/${{ needs.set_tag_values.outputs.owner_lc }}/kanidm:devel,ghcr.io/${{ needs.set_tag_values.outputs.owner_lc }}/kanidm:${{ needs.set_tag_values.outputs.ref_name}}
 
           build-args: |
             "KANIDM_FEATURES="
-          #  "KANIDM_BUILD_OPTIONS=-j1"
           file: tools/Dockerfile
           # Must use OCI exporter for multi-arch: https://github.com/docker/buildx/pull/1813
           outputs: type=oci,dest=/tmp/kanidm-docker.tar
@@ -55,7 +60,7 @@ jobs:
     # This step is split so that we don't apply "packages: write" permission
     # except when uploading the final Docker image to GHCR.
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master' && github.repository == 'kanidm/kanidm'
+    if: ( github.ref_type == 'tag' || github.ref == 'refs/heads/master' ) && github.repository == 'kanidm/kanidm'
     needs: kanidm_build
     permissions:
       packages: write
