examples: add ExecReload for server
With cert reloading available to the server, add an ExecReload=
directive to the example systemd unit providing this functionality.

--- a/examples/systemd/kanidmd.service
+++ b/examples/systemd/kanidmd.service
@@ -10,6 +10,7 @@ Wants=network-online.target
 Type=notify
 
 ExecStart=/usr/local/sbin/kanidmd server --config=/etc/kanidm/server.toml
+ExecReload=/bin/kill -HUP $MAINPID
 Restart=on-failure
 RestartSec=15s
 WorkingDirectory=/var/lib/kanidm
