--- a/server/lib/Cargo.toml
+++ b/server/lib/Cargo.toml
@@ -26,7 +26,7 @@ name = "image_benches"
 harness = false
 
 [features]
-# default = ["dev-oauth2-device-flow"]
+default = []
 dhat-heap = ["dep:dhat"]
 dhat-ad-hoc = ["dep:dhat"]
 dev-oauth2-device-flow = [] # still-in-development oauth2 device flow support
