OAuth2 Device flow foundations (#3098)

--- a/server/core/Cargo.toml
+++ b/server/core/Cargo.toml
@@ -18,10 +18,11 @@ doctest = false
 [features]
 default = ["ui_htmx"]
 ui_htmx = []
+dev-oauth2-device-flow = []
 
 [dependencies]
 async-trait = { workspace = true }
-askama = { workspace = true }
+askama = { workspace = true, features = ["with-axum"] }
 askama_axum = { workspace = true }
 axum = { workspace = true }
 axum-htmx = { workspace = true }
