--- a/tools/cli/Cargo.toml
+++ b/tools/cli/Cargo.toml
@@ -12,8 +12,12 @@ homepage = { workspace = true }
 repository = { workspace = true }
 
 [features]
-default = ["unix"]
+default = [
+    "unix",
+    # "dev-oauth2-device-flow"
+]
 unix = []
+dev-oauth2-device-flow = []
 
 [lib]
 name = "kanidm_cli"
