--- a/proto/Cargo.toml
+++ b/proto/Cargo.toml
@@ -16,11 +16,15 @@ test = true
 doctest = true
 
 [features]
+# default = ["dev-oauth2-device-flow"]
 wasm = ["webauthn-rs-proto/wasm"]
 test = []
 
+dev-oauth2-device-flow = []
+
 [dependencies]
 base32 = { workspace = true }
+base64 = { workspace = true }
 clap = { workspace = true }
 num_enum = { workspace = true }
 scim_proto = { workspace = true }
