--- a/server/testkit/Cargo.toml
+++ b/server/testkit/Cargo.toml
@@ -18,9 +18,11 @@ test = true
 doctest = false
 
 [features]
-default = []
+# default = ["dev-oauth2-device-flow"]
 # Enables webdriver tests, you need to be running a webdriver server
 webdriver = []
+
+dev-oauth2-device-flow = []
 
 [dependencies]
 hyper-tls = { workspace = true }
@@ -57,7 +59,9 @@ escargot = "0.5.12"
 # used for webdriver testing
 fantoccini = { version = "0.21.2" }
 futures = { workspace = true }
-oauth2_ext = { workspace = true, default-features = false }
+oauth2_ext = { workspace = true, default-features = false, features = [
+    "reqwest",
+] }
 openssl = { workspace = true }
 petgraph = { version = "0.6.4", features = ["serde", "serde-1"] }
 serde_json = { workspace = true }
