--- a/server/lib/Cargo.toml
+++ b/server/lib/Cargo.toml
@@ -92,6 +92,7 @@ svg = { workspace = true }
 whoami = { workspace = true }
 
 [dev-dependencies]
+criterion = "0.5.1"
 compact_jwt = { workspace = true, features = [
     "openssl",
     "hsm-crypto",
