Trigger Rust GitHub Action workflows when Rust files are changed and similar for Python files.

--- a/.github/workflows/pykanidm.yml
+++ b/.github/workflows/pykanidm.yml
@@ -5,7 +5,11 @@ name: PyKanidm tests
   push:
     branches:
       - "master"
+    paths:
+      - 'pykanidm/**'
   pull_request:
+    paths:
+      - 'pykanidm/**'
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
