--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -4,7 +4,21 @@ name: Linting checks
 # Trigger the workflow on push
 "on":
   push:
+    paths:
+      - 'libs/**'
+      - 'platform/**'
+      - 'proto/**'
+      - 'server/**'
+      - 'tools/**'
+      - 'unix_integration/**'
   pull_request:
+    paths:
+      - 'libs/**'
+      - 'platform/**'
+      - 'proto/**'
+      - 'server/**'
+      - 'tools/**'
+      - 'unix_integration/**'
 
 env:
   SCCACHE_GHA_ENABLED: "true"
