--- a/.github/workflows/docker_build_kanidmd.yml
+++ b/.github/workflows/docker_build_kanidmd.yml
@@ -5,7 +5,21 @@ name: Container - Kanidmd
 # pushes to "ghcr.io/kanidm/kanidmd:devel" when on "kanidm/kanidm@master".
 "on":
   pull_request:
+    paths:
+      - 'libs/**'
+      - 'platform/**'
+      - 'proto/**'
+      - 'server/**'
+      - 'tools/**'
+      - 'unix_integration/**'
   push:
+    paths:
+      - 'libs/**'
+      - 'platform/**'
+      - 'proto/**'
+      - 'server/**'
+      - 'tools/**'
+      - 'unix_integration/**'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
