--- a/.github/workflows/windows_build.yml
+++ b/.github/workflows/windows_build.yml
@@ -6,7 +6,21 @@ name: Windows Build and Test
   push:
     branches:
       - master
+    paths:
+      - 'libs/**'
+      - 'platform/**'
+      - 'proto/**'
+      - 'server/**'
+      - 'tools/**'
+      - 'unix_integration/**'
   pull_request:
+    paths:
+      - 'libs/**'
+      - 'platform/**'
+      - 'proto/**'
+      - 'server/**'
+      - 'tools/**'
+      - 'unix_integration/**'
   workflow_dispatch:  # so you can run it manually
 env:
   SCCACHE_GHA_ENABLED: "true"
