--- a/Cargo.toml
+++ b/Cargo.toml
@@ -111,12 +111,12 @@ codegen-units = 256
 # ldap3_client = { git = "https://github.com/kanidm/ldap3.git" }
 # ldap3_proto = { git = "https://github.com/kanidm/ldap3.git" }
 
-base64urlsafedata = { path = "../webauthn-rs/base64urlsafedata" }
-webauthn-authenticator-rs = { path = "../webauthn-rs/webauthn-authenticator-rs" }
-webauthn-rs = { path = "../webauthn-rs/webauthn-rs" }
-webauthn-rs-core = { path = "../webauthn-rs/webauthn-rs-core" }
-webauthn-rs-proto = { path = "../webauthn-rs/webauthn-rs-proto" }
-sshkey-attest = { path = "../webauthn-rs/sshkey-attest" }
+# base64urlsafedata = { path = "../webauthn-rs/base64urlsafedata" }
+# webauthn-authenticator-rs = { path = "../webauthn-rs/webauthn-authenticator-rs" }
+# webauthn-rs = { path = "../webauthn-rs/webauthn-rs" }
+# webauthn-rs-core = { path = "../webauthn-rs/webauthn-rs-core" }
+# webauthn-rs-proto = { path = "../webauthn-rs/webauthn-rs-proto" }
+# sshkey-attest = { path = "../webauthn-rs/sshkey-attest" }
 
 # kanidm-hsm-crypto = { path = "../hsm-crypto" }
 
