Update to latest webauthn-rs/time
This updates to the latest webauthn-rs release. When
updating, an issue with time was found that changes
the behaviour of it's parser for rfc3339. This also
updates our tests to accomodate that change.

--- a/tools/cli/Cargo.toml
+++ b/tools/cli/Cargo.toml
@@ -87,6 +87,7 @@ features = ["u2fhid"]
 [target."cfg(target_os = \"macos\")".dependencies.webauthn-authenticator-rs]
 workspace = true
 features = ["mozilla"]
+# features = ["u2fhid"]
 
 [target."cfg(target_os = \"freebsd\")".dependencies.webauthn-authenticator-rs]
 workspace = true
