--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kanidm",
   "version": "0.0.1-dev",
   "description": "Kanidm UI Javascript - not a publishable package, just for development",
-  "type" : "module",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kanidm/kanidm.git"
@@ -16,6 +16,12 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "eslint": "^9.17.0",
-    "globals": "^15.14.0"
+    "globals": "^15.14.0",
+    "prettier": "^3.4.2"
+  },
+  "scripts" : {
+    "prettier": "npx prettier  --ignore-path '*/external/*' server/core/static server/core/static/modules --check",
+    "prettier:fix": "npm run prettier -- --write"
   }
+
 }
