updating config and putting things in nicer places

--- a/server/core/package.json
+++ b/server/core/package.json
@@ -20,8 +20,8 @@
     "prettier": "^3.4.2"
   },
   "scripts" : {
-    "prettier": "npx prettier  --ignore-path 'prettier-ignore' ./static --check",
-    "prettier:fix": "npx prettier --ignore-path 'prettier-ignore' ./static --write"
+    "prettier": "npx prettier  --ignore-path '*/external/*' server/core/static server/core/static/modules --check",
+    "prettier:fix": "npm run prettier -- --write"
   }
 
 }
