--- a/.github/workflows/javascript_lint.yml
+++ b/.github/workflows/javascript_lint.yml
@@ -2,6 +2,7 @@
 name: Javascript Linting
 "on":
     - push
+    - pull_request
 jobs:
   javascript_lint:
     runs-on: ubuntu-latest
@@ -9,5 +10,11 @@ jobs:
     - uses: actions/checkout@v2
     - name: Run ESLint to check Javascript files
       run:
-        make eslint
+  javascript_fmt:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Run Prettier to check Javascript files
+      run:
+        make prettier
 
