Add libsystemd as build dependency
Needed for build of daemon component after addition of the systemd
crate.

Co-authored-by: James Hodgkinson <james@terminaloutcomes.com>
Signed-off-by: Georg Pfuetzenreuter <mail@georg-pfuetzenreuter.net>

--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -29,6 +29,7 @@ jobs:
             libpam0g-dev \
             libudev-dev \
             libssl-dev \
+            libsystemd-dev \
             pkg-config \
             tpm-udev \
             libtss2-dev
