--- a/.github/workflows/rust_build.yml
+++ b/.github/workflows/rust_build.yml
@@ -37,7 +37,8 @@ jobs:
           sudo apt-get install -y \
             libpam0g-dev \
             libudev-dev \
-            libssl-dev
+            libssl-dev \
+            libsystemd-dev
 
       - name: "Build the workspace"
         run: cargo build --workspace
@@ -84,7 +85,8 @@ jobs:
           sudo apt-get install -y \
             libpam0g-dev \
             libudev-dev \
-            libssl-dev
+            libssl-dev \
+            libsystemd-dev
 
       - name: "Build the workspace"
         run: cargo build --workspace
@@ -127,6 +129,7 @@ jobs:
             libpam0g-dev \
             libudev-dev \
             libssl-dev \
+            libsystemd-dev \
             ripgrep
       - name: "Run the release build test script"
         env:
