fix: unrecoverable error page doesn't include logo or domain name (#3352)

--- a/server/core/Cargo.toml
+++ b/server/core/Cargo.toml
@@ -88,6 +88,7 @@ webauthn-rs = { workspace = true, features = [
 [dev-dependencies]
 walkdir = { workspace = true }
 tempfile = { workspace = true }
+kanidmd_lib = { workspace = true, features = ["test"] }
 
 [build-dependencies]
 kanidm_build_profiles = { workspace = true }
