--- a/Cargo.toml
+++ b/Cargo.toml
@@ -120,6 +120,8 @@ codegen-units = 256
 
 # kanidm-hsm-crypto = { path = "../hsm-crypto" }
 
+sd-notify = { git = "https://github.com/Firstyear/sd-notify.git", rev = "de1854c3afad83ae80b7df7ecb7e891e98e205f9" }
+
 [workspace.dependencies]
 kanidmd_core = { path = "./server/core", version = "=1.5.0-dev" }
 kanidmd_lib = { path = "./server/lib", version = "=1.5.0-dev" }
