--- a/.github/workflows/docker_build_radiusd.yml
+++ b/.github/workflows/docker_build_radiusd.yml
@@ -70,7 +70,8 @@ jobs:
         with:
           name: radius-docker
           path: /tmp
-
+      - name: Set up ORAS
+        uses: oras-project/setup-oras@v1
       # Docker won't directly import OCI images and keep their multi-arch
       # features, but ORAS will: https://oras.land/docs/commands/oras_copy
       - name: Push image to GHCR
